# code-chunk

./: .clang-format  .clang-tidy  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  FileUtils.h  FunctionExtractor.cpp  FunctionExtractor.h  FunctionParser  FunctionalInfo.h  Makefile  ModelLoader.cpp  ModelLoader.h  cmake_install.cmake  main.cpp
.github/workflows/: ci.yml
docs/html/: index.html
docs/latex/: refman.tex
src/: FileUtil.cpp  FileUtils.h  FunctionExtractor.cpp  FunctionExtractor.h  FunctionalInfo.h  ModelLoader.cpp  ModelLoader.h  main.cpp
